# chessmind

./: .gitignore  Cargo.toml  README.md  engine.py  play_cli.py  profile_engine.py  pyproject.toml  san.py  setup.py  tk_gui.py  ws_server.py
engine_cython/: eval_speedups.pyx  search_speedups.pyx  speedups.pyx
firefox_extension/: README.md  content.js  manifest.json  popup.html  popup.js
models/: board.py  game.py  pieces.py
src/: board.rs  engine.rs  eval.rs  game.rs  lib.rs  movegen.rs  opening.rs  pieces.rs  san.rs  transposition.rs  types.rs
tests/: test_cache.py  test_eval_speedups.py  test_moves.py  test_san.py
