[package]
name = "chessmind"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
eframe = { version = "0.27", default-features = true }
regex = "1"
once_cell = "1"
lru = "0.14"
rayon = "1"
num_cpus = "1"
shakmaty = "0.28"
shakmaty-syzygy = "0.26"
